blog/infra/k8s/posts.yml
apiVersion: v1
kind: Pod
metadata:
  name: posts
  labels:
    name: posts
spec:
  containers:
  - name: posts
    image: krniya/posts:1.0.0
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
